# Easys_sim

./: README.md  package_install.bash
.github/workflows/: docker_build.yml
Easys_description/: CMakeLists.txt  colcon.pkg  package.xml
Easys_description/config/gz_ros_bridge/: bridge_topic.yaml
Easys_description/config/ros_gz_bridge/: bridge_topic.yaml
Easys_description/config/rviz/: sim.rviz  view_model.rviz
Easys_description/hooks/: hook.dsv.in  hook.sh.in
Easys_description/launch/: sim.launch.xml  view_model.launch.py  view_model.launch.xml
Easys_description/model/: easys.sdf  easys_a1.sdf  easys_a1_assembly.sdf  easys_assembly.sdf  empty_world_easys.sdf
Easys_description/model/urdf/: easys.urdf  easys_a1.urdf
Easys_description/world/: empty_world_easys.sdf  warehouse_world_easys.sdf
balloon_detect/: package.xml  setup.cfg  setup.py
docker/humble/: Dockerfile  run.bash
uw_robocon_sim/: CMakeLists.txt  colcon.pkg  package.xml  setup.cfg  setup.py
uw_robocon_sim/hooks/: hook.sh.in
uw_robocon_sim/launch/: joy_sim.launch.xml
uw_robocon_sim/model/: balloon.sdf  balloon_blue.sdf  balloon_red.sdf  balloon_yellow.sdf  balloons.sdf  jamstec_pool.sdf  pool_wall.sdf
uw_robocon_sim/model/material/: pool_grand.material  pool_wall.material
uw_robocon_sim/uw_robocon_sim/: balloon_detect.py
uw_robocon_sim/world/: ai_challenge.sdf
